# invoice-assistant

./: .env.example  .gitignore  README.md  lefthook.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-vercel.yml
apps/server/: pyproject.toml
apps/server/app/: __init__.py  amount.py  config.py  dev.py  extraction.py  main.py  pdf_text.py  qr_code.py  serve.py  stats.py
apps/server/tests/: test_amount.py  test_extraction.py  test_main.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  api.ts  extraction.ts  pdf.ts  styles.css  types.ts
apps/web/src/utils/: money.ts
apps/web/tests/: api.test.ts  app.test.ts  extraction.test.ts  money.test.ts  pdf.test.ts
