[project]
name = "invoice-assistant-server"
version = "0.1.0"
description = "FastAPI backend that extracts invoice amount text from PDF text layers."
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.7.0",
  "pypdfium2>=4.30.0",
  "opencv-python-headless>=4.10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
